Bike popup widened to avoid text-wrap

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -263,7 +263,7 @@ button {
 }
 
 .bike-popup {
-    width: 180px;
+    width: 200px;
     display: flex;
     flex-direction: column;
 
